# sablier-mcp

./: .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  deploy_staging.sh  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml
src/sablier_mcp/: _core.py  auth.py  client.py  server.py  widgets.py
